# itertools

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  Cargo.toml  LICENSE-MIT  Makefile  README.md  README.rst  bors.toml  build.rs  custom.css  customdocstyle.html  rustfmt.toml  travis_cargo.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml
benches/: bench1.rs  combinations.rs  combinations_lending.rs  combinations_with_replacement.rs  fold_mut.rs  fold_specialization.rs  list_iterator.rs  powerset.rs  specializations.rs  tree_fold.rs  tree_fold1.rs  tree_reduce.rs  tuple_combinations.rs  tuples.rs
benches/extra/: zipslices.rs
examples/: group.rs  iris.rs
src/: adaptors.rs  all_equal_value_err.rs  array_chunks.rs  array_combinations.rs  array_impl.rs  arrays.rs  at_most_one.rs  boxiter.rs  cartesian_power.rs  collect_into_slice.rs  column_row.rs  combinations.rs  combinations_by_len.rs  combinations_up_to.rs  combinations_with_replacement.rs  concat_impl.rs  cons_tuples.rs  cons_tuples_impl.rs  copy_into_slice.rs  diff.rs  duplicates_impl.rs  either_or_both.rs  exactly_one_err.rs  extrema_set.rs  feedback.rs  filter_common.rs  flat_map_ok.rs  flatten_ok.rs  fn_iter.rs  format.rs  free.rs  generic_containers.rs  group_map.rs  groupbylazy.rs  grouping_map.rs  hash_join.rs  impl_macros.rs  inplacemut.rs  intersperse.rs  islice.rs  (+72 more)
src/adaptors/: coalesce.rs  map.rs  mod.rs  multi_product.rs  multipeek.rs
tests/: adaptors_no_collect.rs  arrays.rs  bench1.rs  cartesian_power.rs  flat_map_ok.rs  fn_iter.rs  hash_join.rs  icompr.rs  inplacemut.rs  laziness.rs  macros_hygiene.rs  merge_join.rs  peeking_fold_while.rs  peeking_map_while.rs  peeking_take_while.rs  quick.rs  set_ops.rs  specializations.rs  stride.rs  test_core.rs  test_lru.rs  test_std.rs  tests.rs  tuples.rs  zip.rs
