[package]

name = "itertools"
version = "0.4.2"

license = "MIT/Apache-2.0"
repository = "https://github.com/bluss/rust-itertools"
documentation = "http://bluss.github.io/rust-itertools/"
authors = ["bluss"]

description = "Extra iterator adaptors, iterator methods and macros."

keywords = ["iterator", "data-structure", "zip", "product", "group-by"]

[dependencies.quickcheck]
version = "0.2.21"
optional = true
[dependencies.quickcheck_macros]
version = "0.2.21"
optional = true

[dev-dependencies.permutohedron]
version = "0.1"

[features]

# Unstable features, nightly channel
unstable = []
qc = ["quickcheck", "quickcheck_macros"]

[profile]
bench = { debug = true }
# uncomment to run tests with optimizations
# test = { opt-level = 3, debug = false, rpath = false, lto = false, debug-assertions = false }
