[package]
name = "itertools"
version = "0.5.0"

license = "MIT/Apache-2.0"
repository = "https://github.com/bluss/rust-itertools"
documentation = "https://bluss.github.io/rust-itertools/"
authors = ["bluss"]

description = "Extra iterator adaptors, iterator methods, free functions, and macros."

keywords = ["iterator", "data-structure", "zip", "product", "group-by"]

[lib]
bench = false

[dependencies]
either = { version = "1.0", default-features = false }

[dependencies.quickcheck]
version = "0.2.21"
optional = true

[dev-dependencies.permutohedron]
version = "0.2"

[features]

[profile]
bench = { debug = true }
